0033746: Visualization - Unexpected moving with AIS_ViewCube

Fixed angle calculation for view rotation.
Added draw command vmousebutton to test mouse button events.